style.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Roboto', 'Muli', sans-serif;
    line-height: 1.8;
    letter-spacing: 1px;
    color: #808080;
    min-height: 100vh;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Muli', Helvetica, sans-serif;
    letter-spacing: 2px;
}
/* --------------------------------------------- */


/* header  */

header {
    /* min-height: 28vh; */
    height: 100vh;
    background: linear-gradient(180deg, rgba(255,255,255,.1) 0%, rgba(255, 255, 255,0.2) 100%), url('images/banner.svg') no-repeat;
    background-size: 80vh;
    background-position: right 10% bottom 30%;
}

.progress {
    height: 100vh;
    background: linear-gradient(180deg, rgba(255,255,255,.1) 0%, rgba(255, 255, 255,0.2) 100%), url('images/in_progress.svg') no-repeat;
    background-size: 80vh;
    background-position: right 10% bottom 30%;
}

.logo {
    font-family: 'Muli', Helvetica, Arial, sans-serif;
    font-weight: bolder;
    font-size: 46px;
    letter-spacing: .1em;
    text-decoration: none;
    color: #ffc107;
    text-decoration-line: line-through;
    -webkit-text-decoration-line: line-through;
    text-decoration-color: #dc3545;
    -webkit-text-decoration-color: #dc3545;
    /* text-decoration: line-through #dc3545; */
    opacity: .8;
    transition: all 0.7s;
}

.logo-scroll {
    font-size: 36px;
    transition: all 0.3s ease;
}

.logo:hover {
    color: #0FA3B1;
    opacity: .8;
    transform: translateY(-2px);
}

.subtitle {
    color: #111111;
    font-size: 27px;
    line-height: 40px;
    font-weight: normal;
}
.subtitle-blue {
    color: #0FA3B1;
    font-size: 27px;
    line-height: 40px;
    font-weight: normal;
}
.subtitle-progress {
    color: #808080;
    font-size: 21px;
    line-height: 40px;
    font-weight: normal;
}
.highlight {
    color: #808080;
    background: linear-gradient(180deg, rgba(255,255,255,0) 65%, rgba(255,193,7,.4) 65%);
    display: inline;
    /* opacity: 0.9; */
    text-decoration: none;
    transition: all 0.7s;
}
.highlight:hover {
    color: #BF9677;
    background: linear-gradient(180deg, rgba(255,255,255,0) 65%, rgba(15, 163, 177, .1) 65%);
    display: inline;
    text-decoration: none;
    /* transform: translateY(-2px); */
}
/* ----------------------------------------------------------- */

/* banner  */
.banner {
    position: absolute;
    top: 30%;
    left: 40%;
    transform: translate(-50%,0);
    width: 73%;
}
/* .banner-content {
    margin-top: 40%;
}
.banner-heading {
    margin-top: 15%; */
}

.screen-fit {
    min-height: 70vh;
}
/* -------------------------------------------------------------------- */

/* navbar */
.nav-menu {
    padding: 1.25em 2.5em;
    color: #808080;
    background-color: #ffffff;
    transition: all .7s;
}

.nav-menu > i {
  font-size: 1.75em;
}

.custom-navbar {
    padding: 0 2.5em;
    background:linear-gradient(180deg, rgba(248,249,250,1) 80%, rgba(248,249,250,.9)100%);
}

.menu-item {
    font-family: 'Muli', Helvetica, Arial, sans-serif;
    font-size: 17px;
    letter-spacing: 1px;
    color: #808080;
    padding: 4px 12px !important;
    margin: 8px 4px !important;
    opacity: 0.8;
    transition: all .3s ease;
}

.menu-item:hover {
    /* opacity: 1; */
    /* background-color: rgba(220, 239, 239,.6);
    border-radius: 4px; */
    color: #808080;
    margin: 10px;
    transform: translateY(-2px);
}

.nav-active {
    color: #111111;
}

.nav-active:hover {
    color: #111111;
}

.nav-link {
  font-size: 17px;
}

.line1, .line2, .line3 {
    width: 23px;
    height: 3px;
    margin: 5px;
    background-color: #82A6A4;
    transition: all .4s;
}

.change .line1 {
    transform: rotate(-45deg) translate(-5px,6px);
}

.change .line2 {
    opacity: 0;
}

.change .line3 {
    transform: rotate(45deg) translate(-5px,-6px);
}

.btn-up {
    display: none;
    position: fixed; /* Fixed/sticky position */
    bottom: 30px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    /* background:linear-gradient(130deg, rgba(248,249,250,1) 0%, rgba(248,249,250,.9)100%); */
    cursor: pointer; /* Add a mouse pointer on hover */
    width: 48px;
    height: 48px;
    border-radius: 50% ;
    /* opacity: 0.1; */
    color: #ffc107;
    font-size: 24px;
    box-shadow: 1px 3px 5px #80808028;
    /* opacity: 0.9; */
    /* padding: 2px; */
    transition: all 0.3s ease;
}

.btn-up:hover {
    /* opacity: 1; */
    /* border: solid 1px #ffc107; */
    transform: translateY(-2px);
}

/* ------------------------------------------------------------------------- */

/* Gallery */
.separator {
    letter-spacing: -2px;
    color: #DCEFEF;
    font-weight: 200;
}

.gallery-list-item {
    cursor: pointer;
    user-select: none;
    opacity: .8;
    transition: all 0.3s ease;
}

.gallery-list-item:hover {
    opacity: 1;
    /* color: #BF9677;    */
}

.gallery-item-active {
    color: #BF9677;
    font-weight: 300;
}

.filter {
    position: relative;
    overflow: hidden;
}

.image-box {
    position: relative;
    overflow: hidden;
}

.image-box img {
    max-width: 100%;
    transition: all 0.3s ease;
    display: block;
    width: 100%;
    height: auto;
    transform: scale(1);
}

.image-box:hover img {
    transform: scale(1.1);
}

.title {
    display: block;
    /* font-weight: bolder; */
    font-size: 24px;
    text-transform: capitalize;
    color: #111111;
    letter-spacing: 0.05em;
    transition: all 0.3s ease;
}

.title:hover {
    text-decoration-line: none;
    transform: translateY(-2px);
    cursor: pointer;
}

a:hover {
    text-decoration: none;
}

.category {
    font-size: 14px;
    opacity: 0.8;
}

.category > i {
    /* font-weight: lighter; */
    font-size: 12px;
    opacity: 0.8;
}
/* ------------------------------------------------------------------ */

/* responsiveness  */
@media (max-width: 1024px) {
    header {
        background: linear-gradient(180deg, rgba(255,255,255,.9) 0%,rgba(255, 255, 255,.2) 80%), url('images/banner.svg') no-repeat;
        background-size: 50vh;
        background-position: right 30% bottom 30%;
    }
    .progress {
        background: linear-gradient(180deg, rgba(255,255,255,.1) 0%, rgba(255, 255, 255,0.2) 100%), url('images/in_progress.svg') no-repeat;
        background-size: 50vh;
        background-position: right 30% bottom 30%;
    }
    .banner {
        position: absolute;
        top: 14%;
        left: 35%;
        transform: translate(-50%,0);
        width: 60%;
    }
}
@media (max-width: 768px) {
    header {
        background: linear-gradient(180deg, rgba(255,255,255,.9) 0%,rgba(255, 255, 255,.2) 80%), url('images/banner.svg') no-repeat;
        background-size: 50vh;
        background-position: right 30% bottom 24%;
    }
    .progress {
        background: linear-gradient(180deg, rgba(255,255,255,.9) 0%,rgba(255, 255, 255,.2) 80%), url('images/in_progress.svg') no-repeat;
        background-size: 50vh;
        background-position: right 30% bottom 24%;
    }
    .banner {
        position: absolute;
        top: 14%;
        left: 36%;
        transform: translate(-50%,0);
        width: 60%;
    }
}

@media (max-width: 600px) {
    header {
        background: linear-gradient(180deg, rgba(255,255,255,.9) 0%,rgba(255, 255, 255,.8) 80%), url('images/banner.svg') no-repeat;
        background-size: 60vh;
        background-position: right 10% bottom 24%;
    }
    .progress {
        background: linear-gradient(180deg, rgba(255,255,255,.9) 0%,rgba(255, 255, 255,.8) 80%), url('images/in_progress.svg') no-repeat;
        background-size: 60vh;
        background-position: right 10% bottom 24%;
    }
    .banner {
        position: absolute;
        top: 14%;
        left: 41%;
        transform: translate(-50%,0);
        width: 71%;
    }
    .logo {
      font-size: 24px;
    }
    .subtitle {
        color: #111111;
        letter-spacing: 0.02em;
        font-size: 19px;
        line-height: 28px;
        font-weight: normal;
    }
    .subtitle-blue {
        color: #0FA3B1;
        font-size: 21px;
        line-height: 28px;
        font-weight: normal;
        letter-spacing: 4px;
    }
    .subtitle-progress {
        color: #808080;
        font-size: 16px;
        line-height: 28px;
        font-weight: normal;
        letter-spacing: 0.02em;
    }
}
/* ------------------------------------------------------------------ */

/* button-up animation */
.arrow,
.arrow:before {
  position: absolute;
  left: 75%;
}
.arrow {
  width: 16px;
  height: 16px;
  top: 75%;
  margin: -20px 0 0 -20px;
  -webkit-transform: rotate(225deg);
  border-left: none;
  border-top: none;
  border-right: 2px #ffc107 solid;
  border-bottom: 2px #ffc107 solid;
}
.arrow:before {
  content: '';
  width: 14px;
  height: 14px;
  top: 75%;
  margin: -10px 0 0 -10px;
  border-left: none;
  border-top: none;
  border-right: 1px #ffc107 solid;
  border-bottom: 1px #ffc107 solid;
  animation-duration: 1.2s;
  animation-iteration-count: infinite;
  animation-name: arrow;
}

@keyframes arrow {
  0% {
    opacity: 0;
    transform: translate(-16px, -16px);
  }
  100% {
    opacity: 1;
  }
}

.rise-up {
    display: block;
    animation-name: riseUp;
    animation-duration: 2s;
}

@keyframes riseUp {
    0% {
        transform: translateY(100px) ;
        opacity: 0;
    }
    60% {
        transform: translateY(-40px) ;
        opacity: 0.6;
    }
    100% {
        transform: translateY(0px) ;
        opacity: 1;
    }
}

/* ------------------------------------------------ */

/* Footer */
.footer {
    /* background: linear-gradient(180deg, rgba(164, 197, 204,.2) 0%, rgba(164, 197, 204,1) 100%); */
    background-color: rgba(164, 197, 204,.8);
}

.footer-title {
    color: #F2F6D0;
    font-size: 42px;
}

.socmed {
    transition: all 0.3s ease;
}

.socmed:hover {
    transform: translateY(-2px)
}

/* ------------------------------------------------------------- */

/* About page  */
.name {
    font-size: 42px;
    /* color: #111111; */
    color: #BF9677;
    /* background: linear-gradient(180deg, rgba(255,255,255,0) 65%, rgb(164, 197, 204,.3) 65%); */
    /* display: inline; */
}

.main-pic {
    border-radius: 8px ;
}

.button {
    display: inline-block;
    position: relative;
    height: 48px;
    line-height: 48px;
    text-transform: uppercase;
    font-family: 'Muli';
    font-size: 12px;
    font-weight: 700;
    padding: 0 32px;
    color: #ffffff;
    letter-spacing: 2px;
    border: none;
    margin: 24px 0;
    transition: all 0.3s ease;
}
.button:hover {
    cursor: pointer;
}

.btn-scndary {
    background: #f8f9fa;
    color: #111111;
}

.btn-cta {
    background: #a4c5cc;
}

.btn-scndary:hover {
    background: #2b2b2b;
    color: #ffffff;
}

.btn-cta:hover {
    background: #2b2b2b;
    color: #ffffff;
}

